Working config map from kubernetes
Note
1. Need to enable bootstrapping with org.springframework.cloud:spring-cloud-starter-bootstrap dependency
2. Need to add role and rolebinding

--- a/dev-config.yml
+++ b/dev-config.yml
@@ -1,3 +1,10 @@
-message:
-  welcome: Welcome to dev config map
-  goodbye: Goodbye from dev config map
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dev-config
+data:
+  application.yml: |-
+    message:
+      welcome: Welcome to dev config map
+      goodbye: Goodbye from dev config map
+    simple: Hi from CM!
