--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,16 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
+ext {
+	set('springCloudVersion', "2022.0.3")
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 group = 'com.configexample'
 version = '0.0.1-SNAPSHOT'
 
@@ -18,7 +28,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.cloud:spring-cloud-kubernetes-client-config:3.0.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-config'
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
