--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,5 +2,9 @@ spring:
   cloud:
     kubernetes:
       config:
+        enabled: true
         sources:
-          - name: dev-config
+          - namespace: default
+            name: dev-config
+      reload:
+        enabled: true
